data/all_generated_tests/raw_wast_tests/nop_MismanagementofBlockNesting_339.wast
;; 10. **Combining Multiple Control Structures with `nop`**:     - Create a test involving a combination of blocks, loops, conditionals, and switch tables, all containing `nop` at various points. Verify overall control flow and execution.    - This comprehensive test checks for any potential mismanagement due to `nop` in a complex scenario blending multiple control structures.

(assert_invalid
  (module
    (func $complex
      (block
        (loop
          (if (i32.const 1)
            (then
              nop
              (br 1)
            )
          )
        )
        (block
          (br_table 0 0 (i32.const 0))
          nop
        )
      )
    )
  )
  "type mismatch"
)